<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.authtesting.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pagelabelLogin"
            style="@style/labels_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_space3"
            android:text="@string/pllogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelUsername"
            style="@style/labels_type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_space"
            android:layout_marginTop="@dimen/normal_space"
            android:layout_marginEnd="@dimen/big_space3"
            android:text="@string/labelusername"
            app:layout_constraintBottom_toTopOf="@id/inputUsername"
            app:layout_constraintEnd_toEndOf="@+id/pagelabelLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pagelabelLogin" />

        <EditText
            android:id="@+id/inputUsername"
            style="@style/inputs_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_space"
            android:hint="@string/afi_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelUsername" />

        <TextView
            android:id="@+id/labelPassword"
            style="@style/labels_type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:text="@string/labelpassword"
            app:layout_constraintStart_toStartOf="@+id/labelUsername"
            app:layout_constraintTop_toBottomOf="@id/inputUsername" />

        <EditText
            android:id="@+id/inputPassword"
            style="@style/inputs_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_space"
            android:hint="@string/afi_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:text="@string/labellogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword" />

        <TextView
            android:id="@+id/redirect_register1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginEnd="@dimen/big_space2"
            android:text="@string/rgstrPart1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

        <TextView
            android:id="@+id/redirect_register2"
            style="@style/hyperlink_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_space"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/rgstrPart2"
            app:layout_constraintStart_toEndOf="@id/redirect_register1"
            app:layout_constraintTop_toTopOf="@+id/redirect_register1" />

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
